--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">BookShare</string>
     <string name="adviceHint">请提出您的宝贵意见</string>
     <string name="okBtn">确认</string>
+    <string name="login_name">请输入手机号</string>
+    <string name="login_password">请输入密码</string>
+    <string name="login">登陆</string>
+    <string name="register">注册</string>
 </resources>
