--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,5 @@
     <string name="login_password">请输入密码</string>
     <string name="login">登陆</string>
     <string name="register">注册</string>
-    <string name="returnTime">截止时间：2017.1.1.13:00</string>
+    <string name="returnTime">截止时间：</string>
 </resources>
