you进一步优化借书过程

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,7 +44,7 @@
     <string name="writerIntroduce">作者简介：</string>
     <string name="book">图书:</string>
     <string name="keepTime">可借天数</string>
-    <string name="select_book">选择要分享的图书</string>
+    <string name="select_book">扫描要分享的图书</string>
     <string name="translater">译者：</string>
     <string name="borrowName">借书人：</string>
     <string name="borrowPhone">电话：</string>
