--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,5 +49,9 @@
     <string name="borrowName">借书人：</string>
     <string name="borrowPhone">电话：</string>
     <string name="borrowAddress">地址：</string>
+    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
+    <string name="help">帮助</string>
+    <string name="quit">退出</string>
+    <string name="setting">设置</string>
 </resources>
 
