1、归还图书的dug修改 2、图书列表不出现重复的书 3、重新整理了一遍借书过程

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,5 +53,7 @@
     <string name="help">帮助</string>
     <string name="quit">退出</string>
     <string name="setting">设置</string>
+    <string name="refuse_loan">拒绝借出</string>
+    <string name="agree_loan">同意借出</string>
 </resources>
 
