--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,5 +55,6 @@
     <string name="setting">设置</string>
     <string name="refuse_loan">拒绝借出</string>
     <string name="agree_loan">同意借出</string>
+    <string name="change_owner">选择书主</string>
 </resources>
 
